SERVER-34800 The transaction aborter thread uses 0-second lock acquisition timeout for all lock requests