src/mongo/db/kill_sessions_local.cpp
@@ -81,7 +81,27 @@ void killAllExpiredTransactions(OperationContext* opCtx) {
         KillAllSessionsByPatternSet{makeKillAllSessionsByPattern(opCtx)});
     SessionCatalog::get(opCtx)->scanSessions(
         opCtx, matcherAllSessions, [](OperationContext* opCtx, Session* session) {
-            session->abortArbitraryTransactionIfExpired(opCtx);
+            try {
+                session->abortArbitraryTransactionIfExpired(opCtx);
+            } catch (const DBException& ex) {
+                Status status = ex.toStatus();
+                std::string errmsg = str::stream()
+                    << "May have failed to abort expired transaction with session id (lsid) '"
+                    << session->getSessionId() << "'."
+                    << " Caused by: " << status;
+
+                // LockTimeout errors are expected if we are unable to acquire an IS lock to clean
+                // up transaction cursors. The transaction abort (and lock resource release) should
+                // have succeeded despite failing to clean up cursors. The cursors will eventually
+                // be cleaned up by the cursor manager. We'll log such errors at a higher log level
+                // for diagnostic purposes in case something gets stuck.
+                if (ErrorCodes::isShutdownError(status.code()) ||
+                    status == ErrorCodes::LockTimeout) {
+                    LOG(1) << errmsg;
+                } else {
+                    warning() << errmsg;
+                }
+            }
         });
 }
 
