src/mongo/db/periodic_runner_job_abort_expired_transactions.cpp
@@ -58,39 +58,39 @@ void startPeriodicThreadToAbortExpiredTransactions(ServiceContext* serviceContex
     // job a 1 second period on PeriodicRunner and incrementing a static variable 'seconds' on each
     // run until we reach transactionLifetimeLimitSeconds/2, at which point we run the code and
     // reset 'seconds'. Etc.
-    PeriodicRunner::PeriodicJob job(
-        "startPeriodicThreadToAbortExpiredTransactions",
-        [](Client* client) {
-            try {
-                static int seconds = 0;
-                int lifetime = transactionLifetimeLimitSeconds.load();
+    PeriodicRunner::PeriodicJob job("startPeriodicThreadToAbortExpiredTransactions",
+                                    [](Client* client) {
+                                        static int seconds = 0;
+                                        int lifetime = transactionLifetimeLimitSeconds.load();
 
-                invariant(lifetime >= 1);
-                int period = lifetime / 2;
+                                        invariant(lifetime >= 1);
+                                        int period = lifetime / 2;
 
-                // Ensure: 1 <= period <= 60 seconds
-                period = (period < 1) ? 1 : period;
-                period = (period > 60) ? 60 : period;
+                                        // Ensure: 1 <= period <= 60 seconds
+                                        period = (period < 1) ? 1 : period;
+                                        period = (period > 60) ? 60 : period;
 
-                if (++seconds < period) {
-                    return;
-                }
+                                        if (++seconds < period) {
+                                            return;
+                                        }
 
-                seconds = 0;
+                                        seconds = 0;
 
-                // The opCtx destructor handles unsetting itself from the Client.
-                // (The PeriodicRunner's Client must be reset before returning.)
-                auto opCtx = client->makeOperationContext();
+                                        // The opCtx destructor handles unsetting itself from the
+                                        // Client. (The PeriodicRunner's Client must be reset before
+                                        // returning.)
+                                        auto opCtx = client->makeOperationContext();
 
-                killAllExpiredTransactions(opCtx.get());
-            } catch (const DBException& ex) {
-                if (!ErrorCodes::isShutdownError(ex.toStatus().code())) {
-                    warning() << "Periodic task to abort expired transactions failed! Caused by: "
-                              << ex.toStatus();
-                }
-            }
-        },
-        Seconds(1));
+                                        // Set the Locker such that all lock requests' timeouts will
+                                        // be overridden and set to 0. This prevents the expired
+                                        // transaction aborter thread from stalling behind any
+                                        // non-transaction, exclusive lock taking operation blocked
+                                        // behind an active transaction's intent lock.
+                                        opCtx->lockState()->setMaxLockTimeout(Milliseconds(0));
+
+                                        killAllExpiredTransactions(opCtx.get());
+                                    },
+                                    Seconds(1));
 
     periodicRunner->scheduleJob(std::move(job));
 }
