src/mongo/db/session.cpp
@@ -66,7 +66,7 @@ namespace mongo {
 // is inactive and nothing will be overridden.
 //
 // The default of 0 milliseconds will ensure that transaction operations will immediately give up
-// trying to take any lock if it is not immediatley available. This prevents deadlocks between
+// trying to take any lock if it is not immediately available. This prevents deadlocks between
 // transactions. Setting a non-zero, positive value will also help obviate deadlocks, but won't
 // abort a deadlocked transaction operation to eliminate the deadlock for however long has been set.
 MONGO_EXPORT_SERVER_PARAMETER(maxTransactionLockRequestTimeoutMillis, int, 0);
